2003-11-25 20:12  Alexander Malmberg <alexander@malmberg.org>

	* Source/x11/XGServerEvent.m (initialize_keyboard): Make sure that
	no _*_keycodes contains the same keycode twice.

2003-11-25 12:09  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m ([FTFontInfo_subpixel
	-drawGlyphs::at::to::::::color::::transform:drawinfo:): If freetype
	is sufficiently new, use its LCD subpixel support instead of scaling
	manually.

2003-11-23  Adam Fedor  <fedor@gnu.org>

	* Version 0.9.1

2003-11-23  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerEvent.m (process_modifier_flags()) treat caps
	lock as alpha shift and not as shift modifier. 

2003-11-20  Adam Fedor  <fedor@gnu.org>

	* Source/xlib/XGBitmap.m (_pixmap_combine_alpha): Use RGetClosestXColor
	to get colors on 8bit displays.
	(_bitmap_combine_alpha): Likewise. Fixes PR #6341

2003-11-19  Benhur Stein <benhur@inf.ufsm.br>

	* Source/x11/XGServerEvent.m ([XGServer -processEvent:event]): Correct
	off-by-one error.

2003-11-19  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServer.m: Add some docs.

	* Window focus fixes.
	* Source/x11/XGServerEvent.m ([XGServer -processEvent:event]): Move
	take focus code...
	([XGServer -_handleTakeFocusAtom:forContext:]):  ...to here. Check for
	common problems before passing event to frontend.
	([XGServer -processEvent:event])(FocusOut): Invalidate current
	focus window and focus request.

2003-11-18 16:57  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m: Remove fallback ivar. Add advancementImgd
	and a simple glyph size cache for use in -advancementForGlyph:.

	(-initWithFontName:matrix:screenFont:): Set up advancementImgd.
	(-advancementForGlyph:): Use advancementImgd instead of setting up
	a FTC_ImageTypeRec on each call. Cache glyph sizes to avoid expensive
	freetype calls.

2003-11-05  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerEvent.m ([XGServer -processEvent:]): New
	method broken off from -receivedEvent:type:extra:forMode:.
